--- a/pop-up/pop_up2.html
+++ b/pop-up/pop_up2.html
@@ -101,7 +101,7 @@
 	<br/>
 	<div id="message" align="center"> <p>Acabamos de enviar um email com o resumo simples contendo todas as informações sobre o uso de seus dados.</p>
 	<br/>
-	<button class="bt">Fechar</button>
+	<a href=""><button class="bt">Fechar</button></a>
 	</div>
 </div>
 
